--- a/config/nanodet-plus-m_ConvNeXt_320X192_DSMhand_smoke3.yml
+++ b/config/nanodet-plus-m_ConvNeXt_320X192_DSMhand_smoke3.yml
@@ -5,7 +5,7 @@
 #           AP_small = 0.083
 #               AP_m = 0.278
 #               AP_l = 0.451
-save_dir: workspace/nanodet-plus-m_ConvNeXt_320X192_DSMhand_smoke3
+save_dir: workspace/nanodet-plus-m_ConvNeXt_3333_320X192_DSMhand_smoke3
 model:
   weight_averager:
     name: ExpMovingAverager
@@ -94,7 +94,7 @@ data:
     pipeline:
       normalize: [[72.26834, 72.94908, 71.93302], [63.723274, 63.75379, 63.695095]]
 device:
-  gpu_ids: [1,2,3,4] # Set like [0, 1, 2, 3] if you have multi-GPUs
+  gpu_ids: [] # Set like [0, 1, 2, 3] if you have multi-GPUs
   workers_per_gpu: 10
   batchsize_per_gpu: 64
 schedule:
