--- a/config/nanodet-plus-m_ConvNeXt_320X192_28-09fukang.yml
+++ b/config/nanodet-plus-m_ConvNeXt_320X192_28-09fukang.yml
@@ -89,11 +89,11 @@ data:
     pipeline:
       normalize: [[87.64457, 87.67082, 87.538086], [55.132763, 55.13459, 55.132042]]
 device:
-  gpu_ids: [1,2,3,4] # Set like [0, 1, 2, 3] if you have multi-GPUs
+  gpu_ids: [1,2] # Set like [0, 1, 2, 3] if you have multi-GPUs
   workers_per_gpu: 10
   batchsize_per_gpu: 64
 schedule:
-  resume: workspace/nanodet-plus-m_ConvNeXt_3333_320X192_28-09fukang/model_last.ckpt
+#  resume: workspace/nanodet-plus-m_ConvNeXt_3333_320X192_28-09fukang/model_last.ckpt
 #  load_model: /home/chenpengfei/nanodet/workspace/nanodet-plus-m_ConvNeXt_3333_320X192_DSMhand_smoke3/model_best/model_best.ckpt
   optimizer:
     name: AdamW
