--- a/config/nanodet-plus-m_MobileNetV2_124_320X192_DSM_Dataset_class4_20220211_fukang.yml
+++ b/config/nanodet-plus-m_MobileNetV2_124_320X192_DSM_Dataset_class4_20220211_fukang.yml
@@ -5,7 +5,7 @@
 #           AP_small = 0.083
 #               AP_m = 0.278
 #               AP_l = 0.451
-save_dir: workspace/test
+save_dir: workspace/nanodet-plus-m_MobileNetV2_124_dconv_320X192_SGD500_DSM_Dataset_class4_20220211_fukang
 model:
   weight_averager:
     name: ExpMovingAverager
@@ -15,11 +15,11 @@ model:
     detach_epoch: 10
     backbone:
       name: MobileNetV2
-      out_stages: [2, 4, 6]
+      out_stages: [1, 2, 4]
       activation: LeakyReLU
     fpn:
       name: GhostPAN
-      in_channels: [32, 96, 320]
+      in_channels: [24, 32, 96]
       out_channels: 96
       kernel_size: 5
       num_extra_level: 1
@@ -32,7 +32,7 @@ model:
       feat_channels: 96
       stacked_convs: 2
       kernel_size: 5
-      strides: [8, 16, 32, 64]
+      strides: [4, 8, 16, 32]
       activation: LeakyReLU
       reg_max: 7
       norm_cfg:
@@ -56,7 +56,7 @@ model:
       input_channel: 192
       feat_channels: 192
       stacked_convs: 4
-      strides: [8, 16, 32, 64]
+      strides: [4, 8, 16, 32]
       activation: LeakyReLU
       reg_max: 7
 data:
@@ -79,8 +79,8 @@ data:
       brightness: 0.2  # 亮度
       contrast: [0.6, 1.4]  # 对比度
       saturation: [0.5, 1.2]  # 饱和度
-      normalize: [[103.53, 116.28, 123.675], [57.375, 57.12, 58.395]]
-#      normalize: [[72.26834, 72.94908, 71.93302], [63.723274, 63.75379, 63.695095]]
+#      normalize: [[103.53, 116.28, 123.675], [57.375, 57.12, 58.395]]
+      normalize: [[72.0, 72.0, 72.0], [64.0, 64.0, 64.0]]
   val:
     name: CocoDataset
     img_path: /home/chenpengfei/dataset/DSM_Dataset_class4_20220211_fukang/val/image
@@ -88,8 +88,8 @@ data:
     input_size: [320,192] #[w,h]
     keep_ratio: False
     pipeline:
-      normalize: [[103.53, 116.28, 123.675], [57.375, 57.12, 58.395]]
-#      normalize: [[72.26834, 72.94908, 71.93302], [63.723274, 63.75379, 63.695095]]
+#      normalize: [[103.53, 116.28, 123.675], [57.375, 57.12, 58.395]]
+      normalize: [[72.0, 72.0, 72.0], [64.0, 64.0, 64.0]]
 device:
   gpu_ids: [7] # Set like [0, 1, 2, 3] if you have multi-GPUs
   workers_per_gpu: 10
@@ -97,35 +97,35 @@ device:
 schedule:
 #  resume: workspace/nanodet-plus-m_320X192_DSMhand_smoke3_MultiStepLR_280/model_last.ckpt
 #  load_model:
-  optimizer:
-    name: AdamW
-    lr: 0.001
-    weight_decay: 0.05
-  warmup:
-    name: linear
-    steps: 500
-    ratio: 0.0001
-  total_epochs: 300
-  lr_schedule:
-    name: CosineAnnealingLR
-    T_max: 300
-    eta_min: 0.00005
-  val_intervals: 10
 #  optimizer:
-#    name: SGD
-#    lr: 0.14
-#    momentum: 0.9
-#    weight_decay: 0.0001
+#    name: AdamW
+#    lr: 0.001
+#    weight_decay: 0.05
 #  warmup:
 #    name: linear
-#    steps: 400
-#    ratio: 0.1
-#  total_epochs: 500
+#    steps: 500
+#    ratio: 0.0001
+#  total_epochs: 300
 #  lr_schedule:
-#    name: MultiStepLR
-#    milestones: [ 300,400,450 ]
-#    gamma: 0.1
+#    name: CosineAnnealingLR
+#    T_max: 300
+#    eta_min: 0.00005
 #  val_intervals: 10
+  optimizer:
+    name: SGD
+    lr: 0.14
+    momentum: 0.9
+    weight_decay: 0.0001
+  warmup:
+    name: linear
+    steps: 400
+    ratio: 0.1
+  total_epochs: 100
+  lr_schedule:
+    name: MultiStepLR
+    milestones: [ 75,90,95 ]
+    gamma: 0.1
+  val_intervals: 10
 grad_clip: 35
 evaluator:
   name: CocoDetectionEvaluator
